--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
 </head>
 
 <body>
-    <header>
+    <header align="center">
        <h1>Consoles</h1> 
        <h2>Melhores video games de 2023</h2>
-       <p>Quando se trata dos melhores consoles de vídeo games, você deve comprar um PlayStation, Xbox ou Nintendo Switch, ou algo completamente diferente conforme sua escolha. No entanto, nós classificamos os melhores consoles de jogos que você pode comprar hoje.</p>
+       <p align="left">Quando se trata dos melhores consoles de vídeo games, você deve comprar um PlayStation, Xbox ou Nintendo Switch, ou algo completamente diferente conforme sua escolha. No entanto, nós classificamos os melhores consoles de jogos que você pode comprar hoje.</p>
     </header>    
 
     <main>
-    <article>
+    <article align="center">
         <h1>1-PlayStation 5 a melhor experiência PlayStation</h1>
         <h2>Descrição do console PlayStation 5</h2>
-        <p>O PlayStation 5 representa o auge dos jogos de nova geração, porque oferece uma jogabilidade sólida de 4K a 60fps, ou até 120fps com uma TV compatível. Além disso, proporciona tempos de carregamento extremamente rápidos, graças à inclusão de um SSD personalizado.</p>
+        <p align="left">O PlayStation 5 representa o auge dos jogos de nova geração, porque oferece uma jogabilidade sólida de 4K a 60fps, ou até 120fps com uma TV compatível. Além disso, proporciona tempos de carregamento extremamente rápidos, graças à inclusão de um SSD personalizado.</p>
         <img height="200" width="200" src="play 5.jpg">
     </article>
 
-    <article>
+    <article align="center">
         <h1>2-Consoles de Vídeo Games Xbox One X</h1>
         <h2>Descrição de Xbox One X</h2>
-        <p>Microsoft nos deu o melhor hardware no Xbox One X, um dos melhores Consoles de Vídeo Games. Ele oferece a mesma reprodução de vídeo 4K Blu-ray e HDR do Xbox One S, ao mesmo tempo que traz aquele aprimoramento visual para os jogos. A Microsoft não estava exagerando quando nos disse que o Xbox One X é o console de jogos doméstico mais poderoso já vendido, pelo menos até o lançamento do PS5 e do Xbox Series X.</p>
+        <p align="left">Microsoft nos deu o melhor hardware no Xbox One X, um dos melhores Consoles de Vídeo Games. Ele oferece a mesma reprodução de vídeo 4K Blu-ray e HDR do Xbox One S, ao mesmo tempo que traz aquele aprimoramento visual para os jogos. A Microsoft não estava exagerando quando nos disse que o Xbox One X é o console de jogos doméstico mais poderoso já vendido, pelo menos até o lançamento do PS5 e do Xbox Series X.</p>
         <img height="200" width="200" src="xbox.jpg">
     </article>
     
-    <article>
+    <article align="center">
         <h1>3-Consoles de Vídeo Games PlayStation 4</h1>
         <h2>Descrição do console de vídeo game PlayStation 4</h2>
-        <p>O PlayStation 4 Pro possui excelente hardware com uma fantástica biblioteca de jogos para combinar, e seu controlador DualShock 4 redesenhado é uma atualização muito necessária em relação às versões anteriores do gamepad da Sony.</p>
+        <p align="left">O PlayStation 4 Pro possui excelente hardware com uma fantástica biblioteca de jogos para combinar, e seu controlador DualShock 4 redesenhado é uma atualização muito necessária em relação às versões anteriores do gamepad da Sony.</p>
         <img height="200" width="200" src="play.jpg">
     </article>
     </main>
