--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body>
     <header align="center">
-       <h1>Consoles</h1> 
-       <h2>Melhores video games de 2023</h2>
+       <h1>3 Melhores Consoles de Vídeo Games e Outros Jogos em 2023</h1> 
+       <h2>Veja 3 dos Melhores Consoles de Video Games</h2>
        <p align="left">Quando se trata dos melhores consoles de vídeo games, você deve comprar um PlayStation, Xbox ou Nintendo Switch, ou algo completamente diferente conforme sua escolha. No entanto, nós classificamos os melhores consoles de jogos que você pode comprar hoje.</p>
     </header>    
 
